# CorEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CorEngine.cpp  CorEngine.hpp  CorEngine.in  CorEngineConfig.cmake.in  README.md  TODO.txt  debugrun.cpp
Engine/Core/: AppStructure.cpp  AppStructure.h  LoopManager.cpp  LoopManager.h  WindowManager.cpp  WindowManager.h
Engine/Core/DataTypes/: Models.h  Textures.cpp  Textures.h
Engine/Core/Entity/: Entity.h  Model.h  Texture.cpp  Texture.h
Engine/Graphics/: RenderManager.h
Engine/Utils/: Debug.cpp  Debug.h  DefinePlatform.h  DimensionUtils.h  Loader.cpp  Loader.h  Types.cpp  Types.h  Visibility.h
Test/Shaders/: KindaVertex.slang
backend/: corengine.hpp  ver.hpp
include/CorE/: core_manager.hpp  corengine.hpp  data_types.hpp  debug.hpp  graphics.hpp  loaders.hpp  loop_manager.hpp  matrix.hpp  pipelines.hpp  platform.hpp  short_type.hpp  window_manager.hpp
include/CorE/auxiliary/: corengine.hpp  data_types.hpp  loaders.hpp  platform.hpp
include/CorE/engine/: core_manager.hpp  loop_manager.hpp
include/CorE/engine/windowing/: window_manager.hpp
include/CorE/math/: matrix.hpp
include/auxiliary/: data_types.hpp  debug.hpp  loaders.hpp  short_type.hpp
include/backend/: corengine.hpp  platform.hpp  ver.hpp
include/engine/core/: core_manager.hpp  loop_manager.hpp  window_manager.hpp
include/engine/core/math/: matrix.hpp  vector.hpp
include/engine/core/windowing/: window_manager.hpp
shaders/: hello_slang.slang
src/: core_manager.cpp  debug.cpp  graphics.cpp  loaders.cpp  loop_manager.cpp  matrix.cpp  pipelines.cpp  vector.cpp  window_manager.cpp
src/auxiliary/: CMakeLists.txt  debug.cpp  loaders.cpp
src/engine/: core_manager.cpp  loop_manager.cpp
src/engine/audio/: CMakeLists.txt
src/engine/core/: CMakeLists.txt  core_manager.cpp  loop_manager.cpp  window_manager.cpp
src/engine/core/math/: CMakeLists.txt  matrix.cpp  vector.cpp
src/engine/core/windowing/: CMakeLists.txt  window_manager.cpp
src/engine/graphics/: CMakeLists.txt
src/engine/input/: CMakeLists.txt
src/engine/physics/: CMakeLists.txt
src/engine/windowing/: window_manager.cpp
src/math/: matrix.cpp  vector.cpp
